--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.7.4",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "https-proxy-agent": "^7.0.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-ssl-pinning": "^1.5.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
